--- a/iplayer-podcast.cabal
+++ b/iplayer-podcast.cabal
@@ -7,4 +7,5 @@ cabal-version:       >=1.10
 
 executable iplayer-podcast
   main-is:           iplayer-podcast.hs
-  build-depends:     base, HTTP, xml ==1.3.*, datetime ==0.2.*, MissingH ==1.3.*, directory ==1.2.*
+  build-depends:     base, HTTP, xml ==1.3.*, datetime ==0.3.*, MissingH ==1.4.*, directory ==1.2.*
+  default-language:  Haskell2010
